plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sashkomusic'
version = '0.0.1-SNAPSHOT'
description = 'sm-main-agent'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.springframework.retry:spring-retry'

    implementation 'dev.langchain4j:langchain4j-spring-boot-starter:1.8.0-beta15'
    implementation 'dev.langchain4j:langchain4j-anthropic-spring-boot-starter:1.8.0-beta15'

    implementation 'org.telegram:telegrambots-springboot-longpolling-starter:9.2.0'
    implementation 'org.telegram:telegrambots-client:9.2.0'

    implementation 'org.jsoup:jsoup:1.21.2'

    implementation 'net.jthink:jaudiotagger:3.0.1'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
